--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 body {
   margin: 0;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   min-height: 100vh;
 }
