--- a/src/components/GameGround/GameGround.css
+++ b/src/components/GameGround/GameGround.css
@@ -2,7 +2,7 @@
     display: flex;
     min-width: 250px;
     justify-content: space-around;
-    margin: 50px;
+    margin-top: 30px;
 
     button{
         margin-top: 75px;
@@ -82,7 +82,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 20px 40px;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(10px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
