--- a/src/components/ReusableComponents/FloatingSelector/FloatingSelector.css
+++ b/src/components/ReusableComponents/FloatingSelector/FloatingSelector.css
@@ -3,12 +3,14 @@
     display: flex;
     flex-wrap: wrap;
     border-radius: 0.5rem;
+    margin: 15px;
     /* background-color: #EEE; */
     background-color: transparent;
     box-sizing: border-box;
     box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
     padding: 0.25rem;
     width: 300px;
+    min-width: 150px;
     font-size: 14px;
   }
   
