--- a/src/components/Dialog/Dialog.css
+++ b/src/components/Dialog/Dialog.css
@@ -3,6 +3,8 @@
     width: 100%;
     min-width: 220px;
     max-height: 80vh;
+    background-color: black;
+    color: white;
 }
 
 .restartDialog{
